syntax = "proto3";

import "google/protobuf/empty.proto";

package user;

message CreateUserInput {
  string name = 1;
  string email = 2;
  string address = 3;
  int32 age = 4;
  string password = 5;
}

// The User message
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string address = 4;
  int32 age = 5;
  string createdAt = 6;
  string updatedAt = 7;
  string password = 8;
}

// The request message containing the user ID
message GetUserRequest {
  string id = 1;
}

// The response message containing the user details
message GetUserResponse {
  User user = 1;
}

message UpdateUserInput {
  string id = 1;
  string name = 2;
  string email = 3;
  string address = 4;
  int32 age = 5;
}

// The service definition for UserService
service UserService {
  rpc CreateUser(CreateUserInput) returns (User);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc DeleteUser(GetUserRequest) returns (google.protobuf.Empty);
  rpc UpdateUser(UpdateUserInput) returns (User);
  rpc LoginUser(User) returns (User);
}
